# AgentShell

./: .bedrock_agentcore.yaml.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sample.env
alexa_skill/: interaction_model.json  lambda_function.py
camera_utils/: aws_stt.py  aws_tts.py  ptz.py
config/: .env.example  strands.env.example
mcp_server/: server.py
scripts/: agentcore_launch.sh  start_agentcore_local.sh  start_all_mcp_servers.sh  start_ngrok.sh  start_strands_system.sh  startup_commands.txt  stop_all_mcp_servers.sh
services/go2rtc/: .env.example  docker-compose.yml
services/go2rtc/config/: go2rtc.yaml
strands_agent/: __init__.py  agentcore_app.py  core.py
